Added Clem's new logo
Worked on nav bar alignment

--- a/TheImpossibleEater.html
+++ b/TheImpossibleEater.html
@@ -14,61 +14,54 @@
 
 		<meta http-equiv="author" content="Gianna Sinopoli and Triana Kalmanoff">
 
-		<link href='http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy|Cabin+Sketch|Forum|IM+Fell+English|Pompiere|Bad+Script|Walter+Turncoat|Bevan|Questrial|Amatic+SC|Coming+Soon' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy|Cabin+Sketch|Forum|IM+Fell+English|Pompiere|Bad+Script|Walter+Turncoat|Bevan|Josefin+Sans|Questrial|Amatic+SC|Coming+Soon|PT+Sans|Raleway|Waiting+for+the+Sunrise' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" type="text/css" href="TheImpossibleEater.css">
 
 	</head>
 	<body>
 	<div id="frame" class="center">
-		<div id = "title">
-			The Impossible Eater
-		</div>
-		<div id="subtitle">
-			 A gluten and dairy free blog for the dietarily challenged
-		</div>
+		<div id="resting">
+			<div id="nav">
+				<ul>
+	  				<li>
+	  					<a href="About.html">
+	 						About
+	 					</a>
+	 				</li>
+	  				<li>
+	  				<a href="Recipes.html">
+	  					Recipes
+	  				</a>
+	    				<ul>
+					      <li><a href="# link">Appetizers</a></li>
+					      <li><a href="# link">Entres</a></li>
+					      <li><a href="# link">Desserts</a></li>
+	    				</ul>
+	  				</li>
+	  				<li id="logo">
+	  					<img id="logoimg" src="IMG_7513.PNG">
+	  				</li>
+	 				<li>
+	 					<a href="Nutrition.html">
+	 						Nutrition
+	 					</a>
+	 				<li>
+	 					<a href="Contact.html">
+	 						Contact
+	 					</a>
+	 				</li>
+	 			</ul>
+	 		</div>
+	 		<div id="subtitle">
+				 A gluten and dairy free blog for the dietarily challenged
+			</div>
 
-		<div id="nav">
-			<ul>
-  				<li class="recipes-dropdown">
-  					<a href="About.html">
- 						About
- 					</a>
- 				</li>
-  				<li>
-  				<a href="Recipes.html">Recipes</a>
-    				<ul>
-				      <li><a href="# link">Breakfast</a></li>
-				      <li><a href="# link">Lunch</a></li>
-				      <li><a href="# link">Dinner</a></li>
-    				</ul>
-  				</li>
- 				<li>
- 					<a href="Nutrition.html">
- 						Nutrition
- 					</a>
- 				<li>
- 					<a href="Contact.html">
- 						Contact
- 					</a>
- 				</li>
- 			</ul>
- 		</div>
-			<img src="">
-		<div id="Words">
+	 	</div>
+			<img id="centerphotos" src="bluberriesbanana.jpg">
+		<div id="content">
 				<p>
-					Eggs and raisins?! Okay, I know it sounds gross, but bear with me. This twist on the classic “two-ingredient” banana-egg pancakes takes less than 5 minutes to whip together for an easy protein-packed meal!
-
-					Ingredients:
-					1 banana
-					2 eggs
-					dash (or two) cinnamon
-					1-2 TBS raisins
-					*flax meal
-					*peanut butter to top
-
-					Directions:
-					Mash banana in a bowl and beat in eggs. Add cinnamon, flax, and any other add ins (chia, protein powder, etc.). Scramble over low-medium heat and add in raisins as desired. Cook until just dry. Enjoy!
+					You are what you eat. Eat healthy, be well.
 				</p>
 		</div>
 		</div>
